Fix comments not showing

--- a/static/style/review/review_form.less
+++ b/static/style/review/review_form.less
@@ -6,7 +6,6 @@ main {
 }
 
 section.review-edit {
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,42 +31,6 @@ section.review-edit {
   }
 
   &>form.review-form {
-    &>section.container-essay {
-      &>section.paper-sheet {
-        background-color: @white;
-        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.16);
-        width: @main-content-width;
-        min-height: 1000px;
-        margin: 0 auto;
-        margin-top: 72px;
-        padding: 56px 80px;
-
-        &>field textarea,
-        &>field input {
-          width: calc(@main-content-width - 160px);
-          border: none;
-          outline: none
-        }
-
-        &>.title input {
-          color: rgba(@black, 75%);
-          font-size: @text-medium;
-          font-weight: @bold-weight;
-          text-align: center;
-          margin-bottom: 40px;
-        }
-
-        &>.text textarea {
-          color: rgba(@black, 90%);
-          font-family: @primary-font;
-          font-size: @text;
-          line-height: 1.75em;
-          height: 90%;
-          resize: none;
-        }
-      }
-    }
-
 
     &>section.handle-status {
       margin-top: 72px;
@@ -188,7 +151,8 @@ section.review-edit {
 
             div.skill-row {
               display: flex;
-              gap: 20px; /* Adjust spacing between elements */
+              gap: 20px;
+              /* Adjust spacing between elements */
               // flex-direction: column;
               align-items: flex-start;
 
@@ -275,6 +239,152 @@ section.review-edit {
 
     &>section.showPopUp {
       display: flex;
+    }
+
+    &>section.container-essay {
+      display: flex;
+      align-items: center;
+      position: relative;
+      margin: 32px 0;
+
+      &>section.paper-sheet {
+        background-color: @white;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.16);
+        height: @paper-sheet-height;
+        width: @paper-sheet-width;
+        padding: 56px 80px;
+
+        .title {
+          color: rgba(@black, 75%);
+          font-size: @text-medium;
+          font-weight: @bold-weight;
+          text-align: center;
+          margin-bottom: 40px;
+          width: calc(@main-content-width - 160px);
+        }
+
+        .text {
+          color: rgba(@black, 90%);
+          height: 90%;
+          resize: none;
+          overflow: unset;
+          width: calc(@main-content-width - 160px);
+
+          span.selected-text {
+            background: rgba(@primary-color, 12%);
+            cursor: pointer;
+          }
+
+          span.current-selected-text {
+            background: rgba(@primary-color, 41%);
+          }
+        }
+      }
+
+      &>ul.comment-list {
+        padding-top: 112px;
+        height: @paper-sheet-height;
+
+        &>li.comment-container {
+          display: flex;
+
+          &>section.sticky-note {
+            align-items: center;
+            background-color: @primary-color;
+            border-radius: 4px;
+            clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+            color: @white;
+            cursor: pointer;
+            display: flex;
+            font-weight: @bold-weight;
+            height: 24px;
+            justify-content: center;
+            margin-bottom: 8px;
+            margin-right: 8px;
+            padding-left: 8px;
+            width: 40px;
+          }
+
+          &>section.current-sticky-note {
+            transition: scale 0.25s;
+            scale: 1.1;
+          }
+
+          &>div.comment-card {
+            background-color: @white;
+            border-width: 0px;
+            border-radius: 6px;
+            box-shadow: 0px 4px 4px rgba(@black, 25%);
+            overflow: hidden;
+            max-height: 0;
+            transition: all 0.3s ease;
+            margin-bottom: 12px;
+            width: 400px;
+
+            &>ul.comments {
+              &>li.comment {
+                border-bottom: 1px solid rgba(@gray-color, 40%);
+                padding: 16px;
+
+                span.comment-id {
+                  display: inline-block;
+                  color: @primary-color;
+                  font-style: italic;
+                  font-weight: @semibold-weight;
+                  margin-bottom: 4px;
+                }
+
+                p.comment-text {
+                  font-weight: @medium-weight;
+                }
+              }
+            }
+
+            &>section.submit-comment-form {
+              padding: 16px;
+
+              &>textarea.submit-comment-input {
+                border-color: @gray-color;
+                border-radius: 8px;
+                padding: 8px;
+                outline: none;
+                resize: none;
+                width: 100%;
+
+                &:disabled {
+                  border: none;
+                  background-color: @white;
+                  text-align: right;
+                }
+              }
+
+              &>section.buttons {
+                margin-top: 0px;
+                max-height: 0px;
+                overflow: hidden;
+                transition: all 0.2s ease;
+              }
+
+              &>section.buttons-opened {
+                margin-top: 8px;
+                max-height: 200px;
+                overflow: hidden;
+              }
+            }
+
+            div.selected-text,
+            div.comment,
+            div.subcomment-form {
+              display: block;
+            }
+          }
+
+          &>div.current-comment-card {
+            max-height: 1000px;
+            border-top: 25px solid @primary-color;
+          }
+        }
+      }
     }
   }
 }
